              DataPtr is now deprecated.
            - Added copy construction and copy assignment.
            - Added move construction, move assignment, and member/global
              swap() functions to DiscSetTetData.
            - DiscSetTet::discFromArc() now returns a std::pair instead
              of taking output variables by reference.
        Class DoubleDescription:
            - Can now output to either of Regina's arbitrary precision
              integer types, not only LargeInteger.
            - The main enumeration routine no longer takes an output iterator;
              instead it takes a callable object (e.g., a lambda).
            - The main enumeration now returns each ray by rvalue reference,
              not by pointer to a newly allocated object.
        Class EnableIf<condition, T, defaultValue>:
            - Added to support data members that only appear for some
              template parameters (such as validity and link orientability
              for triangulation faces).
        Class EnumConstraints:
            - This has been removed completely, in favour of the new class
              ValidityConstraints.
        Class Example<dim>, ExampleLink, ExampleSnapPea:
            - All examples now return by value, not by newly allocated pointer.
        Class Face<dim, subdim>:
            - New compile-time constants allowsNonOrientableLinks and
              allowsInvalidFaces.
            - Simplified the class hierarchy; FaceOrientability, FaceValidity,
              FaceListHolder and FaceStorage are all now gone.
            - New compile-time constants dimension and subdimension.
            - For those faces that have a buildLink() function, this now
              returns by const reference instead of const pointer.
              Also, buildLinkDetail() has been renamed buildLinkInclusion();
              the old name is removed entirely.  This now returns just an