@@ -304,13 +304,13 @@ void NormalSurfaces::Enumerator::fillVertexDD() {
     if (list_->which_.has(NS_EMBEDDED_ONLY)) {
         ValidityConstraints c = makeEmbeddedConstraints(*list_->triangulation_,
             list_->coords_);
-        DoubleDescription::enumerateExtremalRays<Vector<LargeInteger>>(
+        DoubleDescription::enumerate<Vector<LargeInteger>>(
             [this](Vector<LargeInteger>&& v) {
                 list_->surfaces_.emplace_back(list_->triangulation_,
                     list_->coords_, std::move(v));
             }, eqns_, c, tracker_);
     } else {
-        DoubleDescription::enumerateExtremalRays<Vector<LargeInteger>>(
+        DoubleDescription::enumerate<Vector<LargeInteger>>(
             [this](Vector<LargeInteger>&& v) {
                 list_->surfaces_.emplace_back(list_->triangulation_,
                     list_->coords_, std::move(v));
@@ -547,13 +547,13 @@ void NormalSurfaces::Enumerator::fillFundamentalDual() {
     if (list_->which_.has(NS_EMBEDDED_ONLY)) {
         ValidityConstraints c = makeEmbeddedConstraints(*list_->triangulation_,
             list_->coords_);
-        HilbertDual::enumerateHilbertBasis<Vector<LargeInteger>>(
+        HilbertDual::enumerate<Vector<LargeInteger>>(
             [this](Vector<LargeInteger>&& v) {
                 list_->surfaces_.emplace_back(list_->triangulation_,
                     list_->coords_, std::move(v));
             }, eqns_, c, tracker_);
     } else {
-        HilbertDual::enumerateHilbertBasis<Vector<LargeInteger>>(
+        HilbertDual::enumerate<Vector<LargeInteger>>(
             [this](Vector<LargeInteger>&& v) {
                 list_->surfaces_.emplace_back(list_->triangulation_,
                     list_->coords_, std::move(v));
@@ -571,13 +571,13 @@ void NormalSurfaces::Enumerator::fillFundamentalCD() {
     if (list_->which_.has(NS_EMBEDDED_ONLY)) {
         ValidityConstraints c = makeEmbeddedConstraints(*list_->triangulation_,
             list_->coords_);
-        HilbertCD::enumerateHilbertBasis<Vector<LargeInteger>>(
+        HilbertCD::enumerate<Vector<LargeInteger>>(
             [this](Vector<LargeInteger>&& v) {
                 list_->surfaces_.emplace_back(list_->triangulation_,
                     list_->coords_, std::move(v));
             }, eqns_, c);
     } else {
-        HilbertCD::enumerateHilbertBasis<Vector<LargeInteger>>(
+        HilbertCD::enumerate<Vector<LargeInteger>>(
             [this](Vector<LargeInteger>&& v) {
                 list_->surfaces_.emplace_back(list_->triangulation_,
                     list_->coords_, std::move(v));
@@ -628,13 +628,13 @@ void NormalSurfaces::Enumerator::fillFundamentalPrimal() {
     if (list_->which_.has(NS_EMBEDDED_ONLY)) {
         ValidityConstraints c = makeEmbeddedConstraints(*list_->triangulation_,
             list_->coords_);
-        HilbertPrimal::enumerateHilbertBasis<Vector<LargeInteger>>(
+        HilbertPrimal::enumerate<Vector<LargeInteger>>(
             [this](Vector<LargeInteger>&& v) {
                 list_->surfaces_.emplace_back(list_->triangulation_,
                     list_->coords_, std::move(v));
             }, shadows.begin(), shadows.end(), c, tracker_);
     } else {
-        HilbertPrimal::enumerateHilbertBasis<Vector<LargeInteger>>(
+        HilbertPrimal::enumerate<Vector<LargeInteger>>(
             [this](Vector<LargeInteger>&& v) {
                 list_->surfaces_.emplace_back(list_->triangulation_,
                     list_->coords_, std::move(v));
